--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,7 +7,11 @@
     "com.unity.inputsystem": "1.11.2",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.netcode.gameobjects": "2.2.0",
+    "com.unity.remote-config": "4.1.1",
     "com.unity.render-pipelines.universal": "17.0.3",
+    "com.unity.services.cloudsave": "3.2.2",
+    "com.unity.services.multiplayer": "1.0.2",
+    "com.unity.services.relay": "1.1.1",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
