--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.11.2",
+    "com.unity.multiplayer.playmode": "1.3.3",
     "com.unity.netcode.gameobjects": "2.2.0",
     "com.unity.remote-config": "4.1.1",
     "com.unity.render-pipelines.universal": "17.0.3",
